Refactor links and clean up commented sections
Updated links and removed commented-out sections for clarity.

--- a/index3.html
+++ b/index3.html
@@ -133,11 +133,11 @@
 
 <p><a href="https://www.acop.com/Information.aspx<span class="tiny"><br>American Consumer Opinion</span>
 
-<p><a href="http://www.academicagroup.com/services/market_policy_research/join_consumer_panel<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+<!-- <p><a href="http://www.academicagroup.com/services/market_policy_research/join_consumer_panel<span class="tiny"><br>Validated by the World Wide Web Consortium</span> --
 
-<p><a href="http://www.academicsurveys.org/<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+<p><a href="http://www.academicsurveys.org/<span class="tiny"><br>Validated by the World Wide Web Consortium</span> -->
 
-<p><a href="http://www.advancedfocus.com/html/register.htm<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+<p><a href="http://www.advancedfocus.com/<span class="tiny"><br>Advanced Focus</span>
 
 <p><a href="http://www.advantageresearch.net/home.htm<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
