Update link text for Affluent-Dynamics

--- a/index3.html
+++ b/index3.html
@@ -139,10 +139,11 @@
 
 <p><a href="http://www.advancedfocus.com/<span class="tiny"><br>Advanced Focus</span>
 			
-
 <p><a href="http://www.advantageresearch.net/home.htm<span class="tiny"><br>Advantage Research</span>
 
-<p><a href="http://www.affluent-dynamics.com/whyjoin.html<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+
+	
+<p><a href="http://www.affluent-dynamics.com/whyjoin.html<span class="tiny"><br>Affluent-Dynamics</span>
 
 <p><a href="http://www.agriculture.com/ag/survey/login.jhtml?regSource=2512&panel=AgAdvisor&_requestid=158000<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
