Fix link for Advanced Focus in index3.html

--- a/index3.html
+++ b/index3.html
@@ -137,7 +137,7 @@
 
 <p><a href="http://www.academicsurveys.org/<span class="tiny"><br>Validated by the World Wide Web Consortium</span> -->
 
-<p><a href="http://www.advancedfocus.com<span class="tiny"><br>Advanced Focus</span>
+<p><a href="https://www.advancedfocus.com<span class="tiny"><br>Advanced Focus</span>
 			
 <p><a href="http://www.advantageresearch.net/home.htm"><span class="tiny"><br>Advantage Research</span>
 
