--- a/index3.html
+++ b/index3.html
@@ -139,11 +139,11 @@
 
 <p><a href="https://www.advancedfocus.com<span class="tiny"><br>Advanced Focus</span>
 			
-<p><a href="https://www.advantageresearch.net/home.htm"><span class="tiny"><br>Advantage Research</span>
+<p><a href="https://www.advantageresearch.net"><span class="tiny"><br>Advantage Research</span>
 
 
 	
-<p><a href="http://www.affluent-dynamics.com/whyjoin.html<span class="tiny"><br>Affluent-Dynamics</span>
+<p><a href="https://www.affluent-dynamics.com/whyjoin.html<span class="tiny"><br>Affluent-Dynamics</span>
 
 <p><a href="http://www.agriculture.com/ag/survey/login.jhtml?regSource=2512&panel=AgAdvisor&_requestid=158000<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
