Fix footer link formatting in index3.html

--- a/index3.html
+++ b/index3.html
@@ -127,7 +127,7 @@
     <br class="clear" />    
     <!-- Footer -->
     <footer class="w3-light-grey">
-		<p><a href="https://www.2020research.com/"><span class="tiny"><br>SAGO Digital Qualitative Research</span><br>				
+		<p><a href="https://www.2020research.com"><br>SAGO Digital Qualitative Research</span><br>				
         <h3>A</h3>
 <!-- <p><a href="https://www.abilitypanel.com/index.html"><span class="tiny"><br>Validated by the World Wide Web Consortium</span> -->
 
