--- a/index3.html
+++ b/index3.html
@@ -131,15 +131,15 @@
         <h3>A</h3>
 <!-- <p><a href="https://www.abilitypanel.com/index.html"><span class="tiny"><br>Validated by the World Wide Web Consortium</span> -->
 
-<p><a href="https://www.acop.com<span class="tiny"><br>American Consumer Opinion</span>
+<p><a href="https://www.acop.com"><br>American Consumer Opinion</span>
 
 <!-- <p><a href="http://www.academicagroup.com/services/market_policy_research/join_consumer_panel<span class="tiny"><br>Validated by the World Wide Web Consortium</span> --
 
 <p><a href="http://www.academicsurveys.org/<span class="tiny"><br>Validated by the World Wide Web Consortium</span> -->
 
-<p><a href="https://www.advancedfocus.com<span class="tiny"><br>Advanced Focus</span>
+<p><a href="https://www.advancedfocus.com"><br>Advanced Focus</span>
 			
-<p><a href="https://www.advantageresearch.net"><span class="tiny"><br>Advantage Research</span>
+<p><a href="https://www.advantageresearch.net"><br>Advantage Research</span>
 
 
 	
