Fix HTML links for Affluent-Dynamics and Agriculture

--- a/index3.html
+++ b/index3.html
@@ -143,9 +143,9 @@
 
 
 	
-<p><a href="https://www.affluent-dynamics.com/whyjoin.html<span class="tiny"><br>Affluent-Dynamics</span>
+<p><a href="https://www.affluent-dynamics.com<br>Affluent-Dynamics</span> -->
 
-<p><a href="http://www.agriculture.com/ag/survey/login.jhtml?regSource=2512&panel=AgAdvisor&_requestid=158000<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+<p><a href="https://www.agriculture.com<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
 <p><a href="http://rsvp.alkami.org/member.html<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
