Clean up HTML links and remove duplicates
Removed duplicate validation links and cleaned up HTML structure.

--- a/index3.html
+++ b/index3.html
@@ -146,21 +146,19 @@
         <p><a href="https://www.affluent-dynamics.com<br>Affluent-Dynamics</span> -->
 
 
-<p><a href="https://www.agriculture.com<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+<p><a href="https://www.agriculture.com"><br>agriculture</span>
 
-<p><a href="http://rsvp.alkami.org/member.html<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+<p><a href="http://rsvp.alkami.org/member.html<span class="tiny"><br>rsvp.alkami</span>
 
-<p><a href="http://www.alphabuzzgroup.com/<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+<p><a href="http://www.alphabuzzgroup.com"><br>alphabuzzgroup</span>
 
-<p><a href="http://www.alphabuzzgroup.com/<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+<p><a href="http://www.alphadetail.com/Home.do"><br>alphadetail</span>
 
-<p><a href="http://www.alphadetail.com/Home.do<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+<p><a href="http://www.ampupnow.com"><br>ampupnow</span>
 
-<p><a href="http://www.ampupnow.com/<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+<p><a href="http://www.atkinsresearchinc.com/join.htm"><br>atkinsresearchinc</span>
 
-<p><a href="http://www.atkinsresearchinc.com/join.htm<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
-
-<p><a href="http://www.awres.com/ExecutiveOffices/professionals.asp<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+<p><a href="http://www.awres.com/ExecutiveOffices/professionals.asp"><br>awres</span>
 
 B
 <p><a href="http://www.bakerstsolutions.com/panelist.html<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
