Refactor footer links and remove duplicates
Removed duplicate link to 'Validated by the World Wide Web Consortium' and cleaned up footer links.

--- a/index3.html
+++ b/index3.html
@@ -130,8 +130,6 @@
 		<a href="https://www.2020research.com"><br>SAGO Digital Qualitative Research</span><br>				
         <h3>A</h3>
         <a href="https://www.acop.com"><br>American Consumer Opinion</span>
-		<p><a href="http://www.academicsurveys.org/<span class="tiny"><br>Validated by the World Wide Web Consortium</span> -->
-
         <a href="https://www.advancedfocus.com"><br>Advanced Focus</span>
 
 
@@ -143,7 +141,8 @@
         <!-- <p><a href="https://www.abilitypanel.com/index.html"><span class="tiny"><br>Validated by the World Wide Web Consortium</span> -->
         <!-- <p><a href="http://www.academicagroup.com/services/market_policy_research/join_consumer_panel<span class="tiny"><br>Validated by the World Wide Web Consortium</span> --
         <a href="https://www.advantageresearch.net"><br>Advantage Research</span>
-        <p><a href="https://www.affluent-dynamics.com<br>Affluent-Dynamics</span> -->
+        <p><a href="https://www.affluent-dynamics.com<br>Affluent-Dynamics</span> --
+        <p><a href="http://www.academicsurveys.org/<span class="tiny"><br>Validated by the World Wide Web Consortium</span> -->
 
 
 <p><a href="https://www.agriculture.com"><br>agriculture</span>
