--- a/index3.html
+++ b/index3.html
@@ -151,7 +151,7 @@
 
 <p><a href="http://www.alphabuzzgroup.com"><br>alphabuzzgroup</span>
 
-<p><a href="http://www.alphadetail.com/Home.do"><br>alphadetail</span>
+<p><a href="https://www.alphadetail.com/Home.do?v=0"><br>alphadetail</span>
 
 <p><a href="http://www.ampupnow.com"><br>ampupnow</span>
 
