--- a/index3.html
+++ b/index3.html
@@ -127,11 +127,13 @@
     <br class="clear" />    
     <!-- Footer -->
     <footer class="w3-light-grey">
-		<a href="https://www.2020research.com"><br>SAGO Digital Qualitative Research</span><br>				
+		<h3>#</h3>
+		<a href="https://www.2020research.com"><br>SAGO 2020 Research</span><br>				
         <h3>A</h3>
         <a href="https://www.acop.com"><br>American Consumer Opinion</span>
         <a href="https://www.advancedfocus.com"><br>Advanced Focus</span>
-
+        <p><a href="https://www.agriculture.com"><br>agriculture</span>
+        <p><a href="http://www.alphabuzzgroup.com"><br>alphabuzzgroup</span></a></p>
 
 
 
@@ -142,14 +144,12 @@
         <!-- <p><a href="http://www.academicagroup.com/services/market_policy_research/join_consumer_panel<span class="tiny"><br>Validated by the World Wide Web Consortium</span> --
         <a href="https://www.advantageresearch.net"><br>Advantage Research</span>
         <p><a href="https://www.affluent-dynamics.com<br>Affluent-Dynamics</span> --
+		<p><a href="http://rsvp.alkami.org/member.html<span class="tiny"><br>rsvp.alkami</span>
+
         <p><a href="http://www.academicsurveys.org/<span class="tiny"><br>Validated by the World Wide Web Consortium</span> -->
 
 
-<p><a href="https://www.agriculture.com"><br>agriculture</span>
 
-<p><a href="http://rsvp.alkami.org/member.html<span class="tiny"><br>rsvp.alkami</span>
-
-<p><a href="http://www.alphabuzzgroup.com"><br>alphabuzzgroup</span>
 
 <p><a href="https://www.alphadetail.com/Home.do?v=0"><br>alphadetail</span>
 
