--- a/index3.html
+++ b/index3.html
@@ -128,12 +128,15 @@
     <!-- Footer -->
     <footer class="w3-light-grey">
 		<h3>#</h3>
-		<a href="https://www.2020research.com"><br>SAGO 2020 Research</span><br>				
+		<br>
+		<p></p><a href="https://www.2020research.com"><br>SAGO 2020 Research</span></a></p><br>				
         <h3>A</h3>
-        <a href="https://www.acop.com"><br>American Consumer Opinion</span>
-        <a href="https://www.advancedfocus.com"><br>Advanced Focus</span>
-        <p><a href="https://www.agriculture.com"><br>agriculture</span>
+        <p></p><a href="https://www.acop.com"><br>American Consumer Opinion</span></a></p>
+        <p></p><a href="https://www.advancedfocus.com"><br>Advanced Focus</span></a></p>
+        <p><a href="https://www.agriculture.com"><br>agriculture</span></a></p>
         <p><a href="http://www.alphabuzzgroup.com"><br>alphabuzzgroup</span></a></p>
+		<p><a href="http://www.ampupnow.com"><br>ampupnow</span></a></p>
+		<p><a href="https://www.alphadetail.com/Home.do?v=0"><br>alphadetail</span></a></p>
 
 
 
@@ -145,22 +148,25 @@
         <a href="https://www.advantageresearch.net"><br>Advantage Research</span>
         <p><a href="https://www.affluent-dynamics.com<br>Affluent-Dynamics</span> --
 		<p><a href="http://rsvp.alkami.org/member.html<span class="tiny"><br>rsvp.alkami</span>
+		<p><a href="http://www.atkinsresearchinc.com/join.htm"><br>atkinsresearchinc</span>
+		<p><a href="http://www.awres.com/ExecutiveOffices/professionals.asp"><br>awres</span>
+			<p><a href="http://www.bakerstsolutions.com/panelist.html<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+
 
         <p><a href="http://www.academicsurveys.org/<span class="tiny"><br>Validated by the World Wide Web Consortium</span> -->
 
 
 
 
-<p><a href="https://www.alphadetail.com/Home.do?v=0"><br>alphadetail</span>
 
-<p><a href="http://www.ampupnow.com"><br>ampupnow</span>
 
-<p><a href="http://www.atkinsresearchinc.com/join.htm"><br>atkinsresearchinc</span>
 
-<p><a href="http://www.awres.com/ExecutiveOffices/professionals.asp"><br>awres</span>
+
+
+
 
 B
-<p><a href="http://www.bakerstsolutions.com/panelist.html<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+
 
 <p><a href="http://baltimoreresearch.com/<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
