--- a/index3.html
+++ b/index3.html
@@ -137,6 +137,10 @@
         <p><a href="http://www.alphabuzzgroup.com"><br>alphabuzzgroup</span></a></p>
 		<p><a href="http://www.ampupnow.com"><br>ampupnow</span></a></p>
 		<p><a href="https://www.alphadetail.com/Home.do?v=0"><br>alphadetail</span></a></p>
+		
+		<h3>B</h3>
+
+        <p><a href="http://www.buzzback.com/<span class="tiny"><br>Validated by the World Wide Web Consortium</span></a></p>
 
 
 
@@ -151,28 +155,23 @@
 		<p><a href="http://www.atkinsresearchinc.com/join.htm"><br>atkinsresearchinc</span>
 		<p><a href="http://www.awres.com/ExecutiveOffices/professionals.asp"><br>awres</span>
 			<p><a href="http://www.bakerstsolutions.com/panelist.html<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+            <p><a href="http://baltimoreresearch.com/<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
+            <p><a href="http://www.beginsurvey.com/beginsurvey/<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
-        <p><a href="http://www.academicsurveys.org/<span class="tiny"><br>Validated by the World Wide Web Consortium</span> -->
-
-
-
-
-
+            <p><a href="http://www.academicsurveys.org/<span class="tiny"><br>Validated by the World Wide Web Consortium</span> -->
 
 
 
 
 
 
-B
 
 
-<p><a href="http://baltimoreresearch.com/<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
-<p><a href="http://www.beginsurvey.com/beginsurvey/<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
-<p><a href="http://www.buzzback.com/<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+
+
 
 <p><a href="http://www4.gsb.columbia.edu/behaviorlab<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
