--- a/index3.html
+++ b/index3.html
@@ -129,14 +129,14 @@
     <footer class="w3-light-grey">
 		<h3>#</h3>
 		<br>
-		<p></p><a href="https://www.2020research.com"><br>SAGO 2020 Research</span></a></p><br>				
+		<p></p><a href="https://www.2020research.com"><br>SAGO 2020 Research</a></p><br>				
         <h3>A</h3>
-        <p></p><a href="https://www.acop.com"><br>American Consumer Opinion</span></a></p>
-        <p></p><a href="https://www.advancedfocus.com"><br>Advanced Focus</span></a></p>
-        <p><a href="https://www.agriculture.com"><br>agriculture</span></a></p>
-        <p><a href="http://www.alphabuzzgroup.com"><br>alphabuzzgroup</span></a></p>
-		<p><a href="http://www.ampupnow.com"><br>ampupnow</span></a></p>
-		<p><a href="https://www.alphadetail.com/Home.do?v=0"><br>alphadetail</span></a></p>
+        <p></p><a href="https://www.acop.com"><br>American Consumer Opinion</a></p>
+        <p></p><a href="https://www.advancedfocus.com"><br>Advanced Focus</a></p>
+        <p><a href="https://www.agriculture.com"><br>agriculture</a></p>
+        <p><a href="http://www.alphabuzzgroup.com"><br>alphabuzzgroup</a></p>
+		<p><a href="http://www.ampupnow.com">ampupnow</a></p>
+		<p><a href="https://www.alphadetail.com/Home.do?v=0">alphadetail</a></p>
 		
 		<h3>B</h3>
 
@@ -159,8 +159,10 @@
 
             <p><a href="http://www.beginsurvey.com/beginsurvey/<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
-            <p><a href="http://www.academicsurveys.org/<span class="tiny"><br>Validated by the World Wide Web Consortium</span> -->
+            <p><a href="http://www.academicsurveys.org/<span class="tiny"><br>Validated by the World Wide Web Consortium</span> --
+            <p><a href="http://www.betatestbeauty.com/<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
+            <p><a href="http://beta.intuit.com/signup/index.cfm<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
 
 
@@ -174,10 +176,8 @@
 
 
 <p><a href="http://www4.gsb.columbia.edu/behaviorlab<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+-->
 
-<p><a href="http://www.betatestbeauty.com/<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
-
-<p><a href="http://beta.intuit.com/signup/index.cfm<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
 <p><a href="http://blackanddecker.com/MemberCenter/default.aspx<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
