--- a/index3.html
+++ b/index3.html
@@ -140,8 +140,8 @@
 		
 		<h3>B</h3>
 
-        <p><a href="http://www.buzzback.com/<span class="tiny"><br>Validated by the World Wide Web Consortium</span></a></p>
-
+        <p><a href="http://www.buzzback.com/<span class="tiny"><br>Buzzback</span></a></p>
+        <p><a href="http://blackanddecker.com/MemberCenter/default.aspx">Blackanddecker</span>
 
 
 
@@ -177,9 +177,6 @@
 
 <p><a href="http://www4.gsb.columbia.edu/behaviorlab<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 -->
-
-
-<p><a href="http://blackanddecker.com/MemberCenter/default.aspx<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
 <p><a href="http://www.bowenresearch.com/signup.php<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 <p><a href="http://www.brandinst.com/<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
