--- a/index3.html
+++ b/index3.html
@@ -150,7 +150,7 @@
         <!-- <p><a href="https://www.abilitypanel.com/index.html"><span class="tiny"><br>Validated by the World Wide Web Consortium</span> -->
         <!-- <p><a href="http://www.academicagroup.com/services/market_policy_research/join_consumer_panel<span class="tiny"><br>Validated by the World Wide Web Consortium</span> --
         <a href="https://www.advantageresearch.net"><br>Advantage Research</span>
-        <p><a href="https://www.affluent-dynamics.com<br>Affluent-Dynamics</span> --
+        <p><a href="https://www.affluent-dynamics.com<br>Affluent-Dynamics</span> 
 		<p><a href="http://rsvp.alkami.org/member.html<span class="tiny"><br>rsvp.alkami</span>
 		<p><a href="http://www.atkinsresearchinc.com/join.htm"><br>atkinsresearchinc</span>
 		<p><a href="http://www.awres.com/ExecutiveOffices/professionals.asp"><br>awres</span>
@@ -176,7 +176,6 @@
 
 
 <p><a href="http://www4.gsb.columbia.edu/behaviorlab<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
--->
 
 <p><a href="http://www.bowenresearch.com/signup.php<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 <p><a href="http://www.brandinst.com/<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
@@ -632,6 +631,7 @@ http://www.zandlgroup.com/<span class="tiny"><br>Validated by the World Wide Web
 
 http://join.zoompanel.com/zoompanel/?master_id=153&subsource_id=111111111&cmp=AFC-OFWI7777004<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 -->
+	
         <div id="farewell"&nbsp; Copyright (c) All rights reserved. Designed by O Baker Web Design Powered<a href="https://orris0.github.io/orris0/index.html" target="_blank"> Come back and visit us soon</a>
             <!-- Optional JavaScript --
             <!-- jQuery first, then Popper.js, then Bootstrap JS -->
