--- a/index3.html
+++ b/index3.html
@@ -85,7 +85,7 @@
     <div id="hnav">
         <ul>
             <li><a title="Southbury Church Services" href="services.html">Services</a></li>
-            <li><a title="What's On" href="southbury-parish-whatson.html">What&#39;s On</a></li>
+            <li><a title="What's On" href="index.html">What&#39;s On</a></li>
 			<li><a title="Contact Us" href="index3.html">Contact Us</a></li>
         </ul>
     </div>
@@ -96,10 +96,10 @@
             <ul>
     	        <li><a href="about.html" title="About us">About Us</a></li>
                 <li><a href="starter-page.html" title="Who's Who in Southbury Parish">Who&#39;s Who</a></li>
-                <li><a href="southbury-parish-location.html" title="Location of the parish">Find us</a></li>
-                <li><a href="southbury-parish-churches.html" title="Description of each church">Churches</a></li>
-                <li><a href="southbury-parish-activities.html" title="Parish activities and organisations">Activities</a></li>
-				<li><a href="southbury-parish-faqs.html" title="Frequently Asked Questions (Baptisms, Funerals, Weddings)">	FAQs</a></li>
+                <li><a href="index[1].html" title="Location of the parish">Find us</a></li>
+                <li><a href="membership.html" title="Description of each church">Churches</a></li>
+                <li><a href="news.html" title="Parish activities and organisations">Activities</a></li>
+				<li><a href="welcome.html" title="Frequently Asked Questions (Baptisms, Funerals, Weddings)">	FAQs</a></li>
                 <li><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
            </ul>
         </nav><!--end of side menu column-->
