--- a/index3.html
+++ b/index3.html
@@ -141,7 +141,7 @@
 		<h3>B</h3>
 
         <p><a href="http://www.buzzback.com/<span class="tiny">Buzzback</span></a></p>
-        <p><a href="http://blackanddecker.com/MemberCenter/default.aspx">Blackanddecker</span>
+        <p><a href="http://blackanddecker.com">Blackanddecker</span>
 
 
 
