--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -291,12 +291,12 @@ validated.html)
 <h2>Hover the mouse over a small picture to see an enlarged version</h2>
 </header>
 <nav>
-<ul>
-<li class="btn"><a href="#">Page Two</a></li>
-<li class="btn"><a href="#">Page Three</a></li>
-<li class="btn"><a href="#">Page Four</a></li>
-<li class="btn"><a href="#">Home Page</a></li>
-</ul>
+        <ul>
+            <li class="btn"><a href="gallery-2col.html">Page Two</a></li>
+            <li class="btn"><a href="gallery-3col-mix.html">Page Three</a></li>
+            <li class="btn"><a href="gallery-one-col.html">Page Four</a></li>
+            <li class="btn"><a href="gallery-page-validated.html">Home Page</a></li>
+        </ul>
 </nav>
 <div id="rightcol">
 Secondary information<br><br>
