--- a/gallery-3col-mix.html
+++ b/gallery-3col-mix.html
@@ -108,12 +108,11 @@
 </header>
 <nav>
 <ul>
-<li class="btn"><a href="#">Page Two</a></li>
-<li class="btn"><a href="#">Page Three</a></li>
-<li class="btn"><a href="#">Page Four</a></li>
-<li class="btn"><a href="#">Home Page</a></li>
-</ul>
-</nav>
+            <li class="btn"><a href="gallery-2col.html">Page Two</a></li>
+            <li class="btn"><a href="gallery-3col-mix.html">Page Three</a></li>
+            <li class="btn"><a href="gallery-one-col.html">Page Four</a></li>
+            <li class="btn"><a href="gallery-page-validated.html">Home Page</a></li>
+        </ul>
 <div id="rightcol">
 Secondary information<br><br>
 <p><a href="http://validator.w3.org/check?uri=referer">
