--- a/gallery-3col-mix.html
+++ b/gallery-3col-mix.html
@@ -4,7 +4,7 @@
 <head>
     <title>Complete Gallery page</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="CSS/gallery-page-HTML5.css">
+    <link rel="stylesheet" type="text/css" href="CSS/gallery-3col-mix.css">
 	<!-- Viewport for responsive web design -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
