--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -17,7 +17,7 @@
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Orris Baker">
     <meta property="og:audio:type" content="audio/mpeg">
-    <link rel="stylesheet" href="CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="gallery-page-HTML5.css" type="text/css" media="screen" charset="utf-8">
     <!-- lightbox --
     <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
     <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
