--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -132,7 +132,7 @@ Footer goes here
 -->
 
 <body>
-	<div class="row">
+	<!-- <div class="row">
             <div class="col-12">
                 <nav role="navigation" id="nav">
                     <input class="trigger" type="checkbox" id="mainNavButton">
@@ -146,7 +146,7 @@ Footer goes here
                         <li><a href="./welcome.html">Contact</a></li>
                     </ul>
                 </nav>
-            </div><!-- col-12 -->
+            </div><!-- col-12 --
         </div><!-- end-.row -->
     <header>
         <h1>A full page roll-over gallery of greetings cards</h1>
