--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -490,7 +490,7 @@ title="Ancient and Modern">
         <a href="https://orris0.github.io/orris0/membership.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
     </body><!-- end body  -->
 </html>
--->
+<!--
     <body>
 		<div id="container">
         <!-- <div class="row">
@@ -508,10 +508,10 @@ title="Ancient and Modern">
                     </ul>
                 </nav>
             </div><!-- col-12 --
-        </div><!-- end-.row -->
+        </div><!-- end-.row --
 
         <div class="wrapper">
-            <header><!-- <div id="hdr"> changed to <header> -->
+            <header><!-- <div id="hdr"> changed to <header> --
                 <h1>A full page roll-over gallery of greetings, cards</h1>
                 <h2>Hover the mouse over a small picture to see an enlarged version</h2>
             </header>
@@ -521,8 +521,8 @@ title="Ancient and Modern">
             <div class="row">
                 <div class="çol-12" padding="2%">
                     <h2 class="dark">Practical HTML5 Projects for fun and Profit!</h2>
-                </div><!-- end-col-12 -->
-            </div><!-- end-row -->
+                </div><!-- end-col-12 --
+            </div><!-- end-row --
 			
             <br class="clear">
 			
@@ -534,13 +534,13 @@ title="Ancient and Modern">
                             Disclaimer! This service is not intended for the those with criminal intent. Celebrities are
                             kind of like people so their privacy should be respected.
                         </p>
-                    </div><!-- end-col-12 -->
+                    </div><!-- end-col-12 --
                 </div><!-- end-row --
         <header>
             <h1>A full page roll-over gallery of greetings cards</h1>
             <h2>Hover the mouse over a small picture to see an enlarged version</h2>
         </header>
-				-->
+				--
         <nav>
             <ul>
                 <li class="btn"><a href="gallery-one-col.html">Page Two</a></li>
@@ -583,8 +583,8 @@ title="Ancient and Modern">
                     <li><a href="#"><img src="images/felixthumb.jpg" alt="Felix" title="Felix"><img class="hid" src="images/felixbig.jpg" alt=""></a></li>
                     <li><a href="#"><img src="images/cliffthumb.jpg" alt="Cliffs" title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                 </ul><br class="clear">
-            </div><!--gallery block closed-->
-        </div><!--midcol closed-->
+            </div><!--gallery block closed--
+        </div><!--midcol closed--
         <footer role="contentinfo" class="row">
             <div class="footer-inner">
                 <div class="col-12">
@@ -624,8 +624,8 @@ title="Ancient and Modern">
 
                                     <hr class="full">
 
-                                </div> <!-- end col-12 -->
-                            </div> <!-- end class row -->
+                                </div> <!-- end col-12 --
+                            </div> <!-- end class row --
 
                             <div class="row" style="background-color: #66d4ff;">
                                 <div class="col-12">
@@ -695,7 +695,7 @@ title="Ancient and Modern">
                                             </div>
 
                                         </div>
-                                </div> <!-- end col-3 -->
+                                </div> <!-- end col-3 --
                                 <div id="container">
                                     <p>&nbsp;</p>
                                     <p>Tour Orris (default)</p>
@@ -809,8 +809,8 @@ title="Ancient and Modern">
                                         <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
                                         <li><a href="#"><i class="instagram"></i></i></a></li>
                                     </ul>
-                                </div> <!-- end col-3 -->
-                            </div> <!-- end class row -->
+                                </div> <!-- end col-3 --
+                            </div> <!-- end class row --
                             <a href="https://orris0.github.io/orris0/index.html"
                                 class="back-to-top d-flex align-items-center justify-content-center"><i
                                     class="bi bi-arrow-up-short"></i></a>
