--- a/gallery-2col.html
+++ b/gallery-2col.html
@@ -24,8 +24,8 @@
         <meta property="og:image" content="image.png">
         <meta name="keywords" content="HTML5, Node.js, Jquery">
         <meta name="author" content="Orris Baker">
-		
-		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="CSS/gallery-2col.css">
+		<link rel="stylesheet" href="CSS/gallery-2col.css" type="text/css" media="screen" charset="utf-8">
 		<!-- <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8"> -->
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="./script.js"></script> 
@@ -56,7 +56,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="./fonts/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css">
-        <link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css">
+        
         <link rel="stylesheet" type="text/css" href="./CSS/gallery-3col-mix.css">
         <link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css">
 
