--- a/gallery-3col-mix.html
+++ b/gallery-3col-mix.html
@@ -4,100 +4,64 @@
 <head>
     <title>Complete Gallery page</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="CSS/gallery-3col-mix.css">
-	<!-- Viewport for responsive web design -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-    <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript" src="js/scripts.js"></script>
-    <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
-	<!--
-	<link rel="stylesheet" href="./style.css"> 
-    <link rel="stylesheet" href="./style[1].css"> 
-    <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
-    <link rel="stylesheet" href="./nav[1].css">
-	-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
     <meta property="og:title" content="A Basic HTML5 Template">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="A simple HTML5 Template for new projects.">
+    <meta property="og:audio:type" content="audio/mpeg">
+    <meta property="og:description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
     <meta property="og:image" content="image.png">
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Orris Baker">
-		
-	<link rel="stylesheet" href="CSS/gallery-3col-mix.css" type="text/css" media="screen" charset="utf-8">
-	<!-- <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8"> -->
-    <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript" src="./script.js"></script> 
-    <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
-	<link rel="stylesheet" href="./bio.css" type="text/css" media="screen" charset="utf-8" />
-        
-    <!-- <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8"> --
-    <link rel="stylesheet" href="./style[1].css">
+    <meta property="og:audio:type" content="audio/mpeg">
+    <link rel="stylesheet" href="CSS/gallery-page-HTML5.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="CSS/gallery-3col-mix.css">
+	<!-- lightbox --
+    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
+    <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="../jQuery-novice-to-ninja/chapter_04/03_jcrop/jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8" />
+    <!--
+    <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+
+    <link rel="stylesheet" href="./font-awesome.min[1].css">
+
     <link rel="stylesheet" href="./nav[1].css">
     <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="./font-awesome.min[1].css">
-	<link rel="icon" type="image/jpg" href="./img/logo.jpg">
-          
-    <link rel="stylesheet" href="./bio.css" type="text/css" media="screen" charset="utf-8" />
-
-		--
-  
-        <link rel="stylesheet" href="./CSS/gallery-3col-mix.css" type="text/css" media="screen" charset="utf-8">
-        <!-- 01_lightbox --
-        <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
-        <!-- 02_colorbox --
-        <link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
-        <script src="./js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
-        <link rel="stylesheet" href="./scroll.css" type="text/css" media="screen" charset="utf-8">
-        <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-        <link rel="stylesheet" href="./fonts/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css">
-        <link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css">
-        <link rel="stylesheet" type="text/css" href="./CSS/gallery-3col-mix.css">
-        <link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css">
-
-        <!-- Favicon-->
-    <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
-    <link rel="alternate" type="application/pdf" href="MainPage.pdf">
-    <link rel="author" href="mailto:bakerorris0@gmail.com">
-    <!-- Bootstrap Icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- SimpleLightbox plugin CSS-->
-    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  
-    <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
-  
-    <!-- <link rel="stylesheet" type="text/css" href="../CSS/equal-2d.css"> --
-    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css">
+	
+    <link rel="icon" type="image/png" href="./weed.jpg">
+	-->
+    <link rel="icon" type="image/png" href="./flexy-logo.png">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <link rel="icon" type="image/png" href="./flexy-logo.png">
+    <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css”>
     <!-- Font Awesome Icons -->
-    <link rel="icon" href="./favicon.ico" sizes="any">
-    <link rel="icon" href="./icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="./icon.png">
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
+        rel='stylesheet' type='text/css'>
     <!-- Plugin CSS -->
-    <!-- Theme CSS - Includes Bootstrap -->
+    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+    <!--Add conditional Javascript-->
     <!-- Favicon-->
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
     <link rel="alternate" type="application/pdf" href="MainPage.pdf">
     <link rel="author" href="mailto:bakerorris0@gmail.comcom">
+
     <!-- Bootstrap Icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
-    <!--Add conditional Javascript-->
-    <!--[if lte IE 7]>
-    <link rel = "stylesheet" type = "text/css" href = "gallery-ie7.css">
-    <![endif]-->
-    <!-- conditional Javascript added -->
+    <!-- SimpleLightbox plugin CSS-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!--conditional Javascript added-->
     <!--[if lte IE 8]>
-        <script src="html5.js" type="text/javascript"></script>
+        <script src="html5.js"></script>
     <![endif]-->
 </head>
 	<!--
