--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -17,6 +17,28 @@
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Orris Baker">
     <meta property="og:audio:type" content="audio/mpeg">
+
+	<link rel="stylesheet" href="CSS/transparent.css" type="text/css" media="screen" charset="utf-8">
+    <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
+    <script src=”js/jquery.mobile-1.0.1.min.js”></script>
+    <script type=”text/javascript” src=”assets/js/ui.js”></script>
+    <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+    <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script type="text/javascript" src="/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+
+   <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> -->
+    <script src rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style[1].css">
+    <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+    <link rel="stylesheet" href="./nav[1].css">
+    <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
 	<!-- <link rel="stylesheet" type="text/css" href="horiz-vert-menu.css"> -->
     
 	 <!-- <link rel="stylesheet" type="text/css" href="CSS/transparent.css"> -->
@@ -71,7 +93,7 @@
 </head>
 
     <body>
-	   <!-- <div class="row">
+	   <div class="row">
             <div class="col-12">
                 <nav role="navigation" id="hnav">
                     <input class="trigger" type="checkbox" id="mainNavButton">
