--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -105,6 +105,7 @@ validated.html)
                 <li><a href="#"><img src="images/catthumb.jpg" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/beachthumb.jpg" alt="Beach" title="Beach"><img class="hid" src="images/beachbig.jpg" alt=""></a></li>
             </ul>
+			<!--
             <ul id="col-2">
                 <li><a href="#"><img src="images/fernsthumb.jpg" alt="Ferns" title="Ferns"><img class="hid" src="images/fernsbig.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/nicothumb.jpg" alt="Nico" title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
@@ -115,7 +116,8 @@ validated.html)
                 <li><a href="#"><img src="images/felixthumb.jpg" alt="Felix" title="Felix"><img class="hid" src="images/felixbig.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/cliffthumb.jpg" alt="Cliffs" title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                 <!-- CHAPTER 2 ■ A ROLLOVER PICTURE GALLERY 51 -->
-            </ul><br class="clear">
+            </ul>  -->
+			<br class="clear">
         </div><!--gallery block closed-->
     </div><!--midcol closed-->
     <footer class="data" id="html5style2footer">
