--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -17,7 +17,7 @@
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Orris Baker">
     <meta property="og:audio:type" content="audio/mpeg">
-
+<!--
 	<link rel="stylesheet" href="CSS/transparent.css" type="text/css" media="screen" charset="utf-8">
     <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
@@ -31,7 +31,7 @@
     <script type="text/javascript" src="/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
 
-   <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> -->
+   <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> --
     <script src rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
     <link rel="stylesheet" href="./style.css">
