--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -7,7 +7,6 @@
     <!-- meta details go here -->
     <title>Test page for semantic tags </title>
     <meta charset="UTF-8">
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
     <meta property="og:title" content="A Basic HTML5 Template">
@@ -19,6 +18,7 @@
     <meta name="author" content="Orris Baker">
     <meta property="og:audio:type" content="audio/mpeg">
     
+    <link rel="stylesheet" href="CSS/transparent.css" type="text/css" media="screen" charset="utf-8">
     <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
     <script src=”js/jquery.mobile-1.0.1.min.js”></script>
@@ -34,10 +34,10 @@
    <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> -->
     <script src rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style[1].css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style[1].css">
     <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
-    <link rel="stylesheet" href="nav[1].css">
+    <link rel="stylesheet" href="./nav[1].css">
     <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
     <!--
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
