--- a/gallery-3col-mix.html
+++ b/gallery-3col-mix.html
@@ -152,17 +152,17 @@ Footer goes here
         <p class="advert">Web Design by Orris BAker</p></div>
         <div id="midcol">
             <div id="gallery-block">
-            <ul id="3col-mixcol-1">
+            <ul id="col-1">
                 <li><a href="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/catthumb.jpg" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/beachthumb.jpg" alt="Beach" title="Beach"><img class="hid" src="images/beachbig.jpg" alt=""></a></li>
             </ul>
-            <ul id = "3col-mixcol-2">
+            <ul id = "col-2">
                 <li><a href="#"><img src="images/fernsthumb.jpg" alt="Ferns" title="Ferns"><img class="hid" src="images/fernsbig.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/nicothumb.jpg" alt="Nico" title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/childbeachthumb.jpg" alt="Child and Beach" title="Child and Beach"><img class="hid" src="images/childbeachbig.jpg" alt=""></a></li>
             </ul>
-            <ul id = "3col-mixcol-3">
+            <ul id = "col-3">
                 <li><a href="#"><img src="images/ancientthumb.jpg" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/felixthumb.jpg" alt="Felix" title="Felix"><img class="hid" src="images/felixbig.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/cliffthumb.jpg" alt="Cliffs" title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
