--- a/background-ex7-transp.html
+++ b/background-ex7-transp.html
@@ -30,7 +30,7 @@
 
     <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> -->
     <script src rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+    <!-- <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css"> -->
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./style[1].css">
     <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
@@ -43,13 +43,13 @@
     <link rel="icon" type="image/png" href="./weed.jpg">
     <link rel="icon" type="image/png" href="./flexy-logo.png">
     <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css”>
-    <!-- Font Awesome Icons -->
+    <!-- Font Awesome Icons --
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
         rel='stylesheet' type='text/css'>
-    <!-- Plugin CSS -->
+    <!-- Plugin CSS --
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
     <!--Add conditional Javascript-->
     <!-- Favicon-->
