--- a/background-ex7-transp.html
+++ b/background-ex7-transp.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="./style[1].css">
     <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
     <link rel="stylesheet" href="./nav[1].css">
+    <!--
     <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
     <!--
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -47,8 +48,7 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
-        rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <!-- Plugin CSS --
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
     <!--Add conditional Javascript-->
