--- a/background-ex7-transp.html
+++ b/background-ex7-transp.html
@@ -39,11 +39,12 @@
     <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
     <!--
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
--->
+
     <link rel="stylesheet" href="./font-awesome.min[1].css">
+    -->
     <link rel="icon" type="image/png" href="./weed.jpg">
     <link rel="icon" type="image/png" href="./flexy-logo.png">
-    <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css”>
+    <link rel=”stylesheet” href=”https://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css”>
     <!-- Font Awesome Icons --
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <!-- Google Fonts -->
