--- a/background-ex7-transp.html
+++ b/background-ex7-transp.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="CSS/transparent.css" type="text/css" media="screen" charset="utf-8">
     <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
-    <script src=”js/jquery.mobile-1.0.1.min.js”></script>
+    <script src="jquery.mobile-1.0.1.min.js"></script>
     <script type=”text/javascript” src=”assets/js/ui.js”></script>
     <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
