--- a/background-ex7-transp.html
+++ b/background-ex7-transp.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="js/scripts.js"></script>
     <script src="jquery.mobile-1.0.1.min.js"></script>
     <script type=”text/javascript” src=”assets/js/ui.js”></script>
-    <script type="text/javascript" src=".jquery-1.7-min.js"></script>
+    <script type="text/javascript" src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
