--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -82,10 +82,10 @@ validated.html)
     </header>
     <nav>
         <ul>
-            <li class="btn"><a href="gallery-one-col.html">One-col</a></li>
-            <li class="btn"><a href="gallery-2col.html">Two-col</a></li>
-            <li class="btn"><a href="gallery-3col-mix.html">Three-col</a></li>
-            <li class="btn"><a href="gallery-page-validated.html">Home Page</a></li>
+            <li class="btn"><a href="./gallery-one-col.html">One-col</a></li>
+            <li class="btn"><a href="./gallery-2col.html">Two-col</a></li>
+            <li class="btn"><a href="./gallery-3col-mix.html">Three-col</a></li>
+            <li class="btn"><a href="./gallery-page-validated.html">Home Page</a></li>
         </ul>
     </nav>
     <div id="rightcol">
