--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -72,10 +72,10 @@
     </header>
     <nav>
         <ul>
-            <li class="btn"><a href="gallery-one-col.html">One-col</a></li>
-            <li class="btn"><a href="gallery-2col.html">Two-col</a></li>
-            <li class="btn"><a href="gallery-3col-mix.html">Three-col</a></li>
-            <li class="btn"><a href="gallery-page-validated.html">Home Page</a></li>
+            <li class="btn"><a href="gallery-one-col.html">One-col-Gallery</a></li>
+            <li class="btn"><a href="gallery-2col.html">Two-col-Gallery</a></li>
+            <li class="btn"><a href="gallery-3col-mix.html">Three-col-Gallery</a></li>
+            <li class="btn"><a href="gallery-page-validated.html">Home Page Gallery</a></li>
         </ul>
     </nav>
     <div id="rightcol">
