--- a/gallery-2col.html
+++ b/gallery-2col.html
@@ -13,18 +13,17 @@
     <!-- Anything you write under head is not displayed on the browser content page. -->
     <meta charset="UTF-8">
     <title>Page Two <!-- Two column rollover Gallery --></title>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
     <meta property="og:title" content="A Basic HTML5 Template">
     <meta property="og:type" content="website">
     <meta property="og:audio:type" content="audio/mpeg">
-    <meta property="og:description"
-        content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
+    <meta property="og:description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
     <meta property="og:image" content="image.png">
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Orris Baker">
     <meta property="og:audio:type" content="audio/mpeg">
+    <!--
     <link rel="stylesheet" href="CSS/gallery-page-HTML5.css" type="text/css" media="screen" charset="utf-8">
     <!-- lightbox --
     <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
