--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -276,7 +276,8 @@ validated.html)
     <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
     <script src="jquery.innerfade.js" type="text/javascript"></script>
-    <script src="jquery.cycle.all.min.js" type="text/javascript"></script>
+    <!--
+    <script src="../jquery.cycle.all.min.js" type="text/javascript"></script>
     <!-- Template Main JS File -->
     <script src="../orris0/main.js"></script>
     <a href="https://orris0.github.io/orris0/membership.html"
