--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -46,20 +46,19 @@ validated.html)
     <link rel="icon" type="image/png" href="./flexy-logo.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <link rel="icon" type="image/png" href="./flexy-logo.png">
-    <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css”>
-    <!-- Font Awesome Icons -->
+    <link rel=”stylesheet” href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css">
+    <!-- Font Awesome Icons --
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
-        rel='stylesheet' type='text/css'>
-    <!-- Plugin CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css">
+    <!-- Plugin CSS --
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
     <!--Add conditional Javascript-->
     <!-- Favicon-->
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
     <link rel="alternate" type="application/pdf" href="MainPage.pdf">
-    <link rel="author" href="mailto:bakerorris0@gmail.comcom">
+    <link rel="author" href="mailto:bakerorris0@gmail.com">
 
     <!-- Bootstrap Icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
