--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -28,8 +28,7 @@ validated.html)
     <!-- lightbox --
         <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
     <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
-    <link rel="stylesheet" href="../jQuery-novice-to-ninja/chapter_04/03_jcrop/jquery.Jcrop.css" type="text/css"
-        media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="../jQuery-novice-to-ninja/chapter_04/03_jcrop/jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8" />
     <!--
         <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
