--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -273,14 +273,13 @@ validated.html)
     <script type="text/javascript" src="js/scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+    <script type="text/javascript" src="./jquery.scrollTo.js" charset="utf-8"></script>
     <script src="jquery.innerfade.js" type="text/javascript"></script>
     <!--
     <script src="../jquery.cycle.all.min.js" type="text/javascript"></script>
     <!-- Template Main JS File -->
-    <script src="../orris0/main.js"></script>
-    <a href="https://orris0.github.io/orris0/membership.html"
-        class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+    
+    <a href="https://orris0.github.io/orris0/membership.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 </body><!-- end body  -->
 
 </html><!--
