--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -18,7 +18,7 @@
     <meta property="og:audio:type" content="audio/mpeg">
     <link rel="stylesheet" href="CSS/gallery-page-HTML5.css" type="text/css" media="screen" charset="utf-8">
     <!-- lightbox --
-    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
+    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> --
     <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../jQuery-novice-to-ninja/chapter_04/03_jcrop/jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8" />
     <!--
