--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -235,7 +235,7 @@
         </footer>
         <script src="lib/jquery-1.8.17.custom.min.js" type="text/javascript"></script>
 
-        <!-- Vendor JS Files -->
+        <!-- Vendor JS Files --
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="../orris0/aos.css"></script>
         <script src="../orris0/bootstrap.bundle.min.js"></script>
