--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -258,8 +258,9 @@
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
         <script src="jquery.innerfade.js" type="text/javascript"></script>
         <script src="./jquery.cycle.all.min.js" type="text/javascript"></script>
-        <!-- Template Main JS File -->
+        <!-- Template Main JS File --
         <script src="../orris0/main.js"></script>
+    -->
         <a href="https://orris0.github.io/orris0/gallery-page-validated.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
     </body><!-- end body  -->
 </html>
