--- a/gallery-3col-mix.html
+++ b/gallery-3col-mix.html
@@ -433,7 +433,7 @@
                                     <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
                                     <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                     <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-                                </ul><!--end of menu list-->
+                                </ul><!--end of menu list--
 </nav>
 <!--</div> removed and replaced with </nav>--
                             <div class="data" id="html5style2midcol">
@@ -892,7 +892,7 @@
 
                 </div>
 		    </div><!-- main-content --
-		</div><!-- main-content -->
+		</div><!-- main-content --
 
 <footer role="contentinfo" class="row">
     <div class="footer-inner">
@@ -941,8 +941,8 @@
 
             <hr class="full">
 
-        </div> <!-- end col-12 -->
-    </div> <!-- end class row -->
+        </div> <!-- end col-12 --
+    </div> <!-- end class row --
 
     <div class="row" style="background-color: #66d4ff;">
         <div class="col-12">
@@ -1011,7 +1011,7 @@
                     </div>
 
                 </div>
-        </div> <!-- end col-3 -->
+        </div> <!-- end col-3 --
         <div id="container">
             <p>&nbsp;</p>
             <p>Tour Orris (default)</p>
@@ -1123,8 +1123,8 @@
                 <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
                 <li><a href="#"><i class="instagram"></i></i></a></li>
             </ul>
-        </div> <!-- end col-3 -->
-    </div> <!-- end class row -->
+        </div> <!-- end col-3 --
+    </div> <!-- end class row --
     <a href="https://orris0.github.io/orris0/index.html"
         class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
     <div class="col-12">
@@ -1133,8 +1133,8 @@
         </div>
     </div>
 </footer>
-</div><!-- end wrapper -->
-</body><!-- end body  -->
+</div><!-- end wrapper --
+</body><!-- end body  --
 
 </html>
 
