--- a/index3.html
+++ b/index3.html
@@ -16,7 +16,7 @@
         <meta name="author" content="Orris Baker">
 	    <meta property="og:audio:type" content="audio/mpeg"> 
         <link rel="stylesheet" type="text/css" href="horiz-vert-menu.css">
-        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+        <link rel="stylesheet" type="text/css" href="CSS/HTML5-style-2.css">
         <!-- <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
