--- a/index3.html
+++ b/index3.html
@@ -120,6 +120,7 @@
                 <span class="tiny"><br>Validated by the World Wide Web Consortium</span></a></p>
 		    <p><span class="tiny">Website design and production by<br> O Baker Web Design</span></p>
         </div>
+        <!--
         <div id="midcontent">
             <h2>CONTACT US</h2><br>
         <div id="mid-left-col">   
@@ -132,7 +133,7 @@
         <div id="mid-right-col">
             <img class="cntr" title="Southbury Church" alt="Southbury Church" height="172" src="images/southbury220.jpg" width="220">
         </div>
-        </div>
+        </div> -->
     </div>
     <br class="clear" />    
     <!-- Footer -->
