--- a/starter-page.html
+++ b/starter-page.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:ng-app lang="en">
     <head>
         <title>Contact page for the parish of Southbury, Devon</title>
-		<script type="text/javascript" src="jquery-1.7-min.js"></script>
-        <script type="text/javascript" src="script.js"></script>
+		<script type="text/javascript" src="jquery-1.7.1.min.js"></script>
+        <script type="text/javascript" src="scripts.js"></script>
         <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
