--- a/background-ex7-transp.html
+++ b/background-ex7-transp.html
@@ -793,6 +793,7 @@ http://join.zoompanel.com/zoompanel/?master_id=153&subsource_id=111111111&cmp=AF
                 <a href="https://orris0.github.io/orris0/membership.html"
                     class="back-to-top d-flex align-items-center justify-content-center"><i
                         class="bi bi-arrow-up-short"></i></a>
+            </div>
 </body><!-- end body  -->
 
 </html>
