--- a/starter-page.html
+++ b/starter-page.html
@@ -100,8 +100,8 @@
         </div> -->
     </div>
     <br class="clear" />    
-    <!-- Footer -->
-    <footer class="w3-light-grey">
+    <!-- Footer 
+    <footer class="w3-light-grey">-->
 		<footer class="data" id="html5style2footer">
             <div class="footer-inner">
                 <div class="company-details">
